--- a/app/src/main/res/layout/layout_song.xml
+++ b/app/src/main/res/layout/layout_song.xml
@@ -38,7 +38,7 @@
         android:layout_marginRight="17dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/playImageView"
-        android:src="@drawable/playbutton"
+        android:src="@drawable/play_btn"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentEnd="true"/>
