--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="coral">#fa6243</color>
     <color name="kiwi">#99d94b</color>
     <color name="grass">#53b824</color>
+    <color name="twograss">#53b924</color>
+
 
 
 </resources>
