--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,11 +8,37 @@
         <item name="colorPrimaryDark">#3a3a3a</item>
         <item name="colorAccent">#fffcfb</item>
 
-        <item name="android:windowLightStatusBar">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">@android:color/transparent</item>
 
 
     </style>
+
+    <style name="Dialog" parent="Theme.AppCompat.Light.NoActionBar" >
+        <!-- Customize your theme here. -->
+
+        <item name="colorPrimary">#000</item>
+        <item name="colorPrimaryDark">#3a3a3a</item>
+        <item name="colorAccent">#fffcfb</item>
+
+    </style>
+
+
+    <style name="App" parent="Theme.AppCompat.Light.NoActionBar" >
+
+        <item name="colorPrimary">#fff</item>
+        <item name="colorPrimaryDark">#3a3a3a</item>
+        <item name="colorAccent">@color/coral</item>
+
+        <item name="android:windowDrawsSystemBarBackgrounds" tools:targetApi="lollipop">true</item>
+
+
+        <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">@android:color/transparent</item>
+
+
+    </style>
+
 
 
 </resources>
