--- a/app/src/main/res/layout/activity_sign_up_with_email.xml
+++ b/app/src/main/res/layout/activity_sign_up_with_email.xml
@@ -14,11 +14,13 @@
 
 
         <RelativeLayout
+            android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="100">
 
             <ImageView
+                android:onClick="back"
                 android:layout_marginTop="8dp"
                 android:id="@+id/addSongsButton"
                 android:padding="8dp"
@@ -64,7 +66,7 @@
                 android:layout_height="90dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginLeft="35dp"
-                android:layout_marginTop="35dp"
+                android:layout_marginTop="30dp"
                 android:src="@drawable/photo_profile"
                 app:civ_border_color="@color/white"
                 app:civ_border_width="2dp" />
@@ -83,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/photoImageView"
                 android:layout_marginLeft="30dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginRight="30dp"
                 android:background="#20FFFFFF"
                 android:orientation="horizontal">
@@ -121,7 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/radoigroup"
-                android:layout_marginTop="30dp">
+                android:layout_marginTop="10dp">
 
 
                 <com.google.android.material.textfield.TextInputLayout
