--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -1,96 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundregistr">
+    android:background="@drawable/backgroundregistr"
+    android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:weightSum="100">
 
         <ImageView
-            android:onClick="back"
-            android:layout_marginTop="8dp"
             android:id="@+id/addSongsButton"
-            android:padding="8dp"
-            android:layout_marginLeft="10dp"
-            android:background="?selectableItemBackgroundBorderless"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_alignParentStart="true"
-            android:src="@drawable/back"
-            />
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="8dp"
+            android:background="?selectableItemBackgroundBorderless"
+            android:onClick="back"
+            android:padding="8dp"
+            android:src="@drawable/back" />
 
         <TextView
-            android:layout_marginTop="19dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:textColor="@color/white"
+            android:layout_marginTop="19dp"
             android:text="Language"
+            android:textColor="@color/white"
             android:textSize="16sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <ImageView
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="10dp"
             android:id="@+id/burgerButton"
-            android:padding="8dp"
-            android:background="?selectableItemBackgroundBorderless"
             android:layout_width="47dp"
             android:layout_height="35dp"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/burgerwhite"
-            android:onClick="goToMenu" />
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="10dp"
+            android:background="?selectableItemBackgroundBorderless"
+            android:onClick="goToMenu"
+            android:padding="8dp"
+            android:src="@drawable/burgerwhite" />
     </RelativeLayout>
 
 
-   <RadioGroup
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content">
-
-    <RadioButton
-        android:checked="true"
-        android:layout_marginTop="30dp"
-        android:layout_width="match_parent"
+    <RadioGroup
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@android:color/transparent"
-        android:text="@string/english"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-         />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@drawable/line_items"/>
+        android:checkedButton="@id/addSongsButton">
+
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="20dp"
+            android:background="@android:color/transparent"
+            android:layoutDirection="rtl"
+            android:text="@string/english"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/line_items" />
 
 
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="20dp"
+            android:background="@android:color/transparent"
+            android:text="German"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
-    <RadioButton
-        android:layout_marginTop="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@android:color/transparent"
-        android:text="German"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-         />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@drawable/line_items"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/line_items" />
 
-</RadioGroup>
+    </RadioGroup>
 
 </LinearLayout>
